# rabbit_mq

./: README.md  config.py  consumer.py  docker-compose.yaml  get_task.py  main.py  publisher.py  pyproject.toml  usefull
celeri_01/shop_app/: celery_app.py  hint.md  send_emails.py  smtp_email_backends.py  tasks.py
celery/shop_app/: celery_app.py  hint.md  send_emails.py  tasks.py
rabbit/: __init__.py  base.py
