[project]
name = "rabbit-mq"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Евгений Бусыгин (ноутбук)",email = "busyginz@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "kombu (>=5.5.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false
